[gd_scene load_steps=25 format=3 uid="uid://dsqwf2jl0i5yo"]

[ext_resource type="Texture2D" uid="uid://jq5a3pilqh80" path="res://Assets/Textures/player_idle.png" id="1_0phcd"]
[ext_resource type="Script" uid="uid://bt428ebir3l1d" path="res://Scripts/level_3D/level_3d.gd" id="1_b8p5r"]
[ext_resource type="Script" uid="uid://bv8xdqa433322" path="res://Scripts/level_3D/player.gd" id="1_iyh7l"]
[ext_resource type="Theme" uid="uid://347o3jmibjcx" path="res://Assets/Themes/base_theme.tres" id="3_ae7wr"]
[ext_resource type="Script" uid="uid://skd327rsfqhc" path="res://Scripts/levels/top_panel_container.gd" id="3_nmwpf"]
[ext_resource type="Script" uid="uid://d25ih565yl4j" path="res://Scripts/levels/bottom_ui_panel.gd" id="4_nmwpf"]
[ext_resource type="Texture2D" uid="uid://20fisve0baj0" path="res://Assets/Textures/player_portrait.png" id="5_hrrnm"]
[ext_resource type="Script" uid="uid://bmq057ahxduya" path="res://Scripts/levels/victory_panel.gd" id="6_nqbl8"]
[ext_resource type="Script" uid="uid://swkodfd5mnip" path="res://Scripts/levels/open_button.gd" id="6_oaity"]
[ext_resource type="PackedScene" uid="uid://1kpa0mxijviy" path="res://Inventory/inventory_level.tscn" id="7_b8p5r"]
[ext_resource type="PackedScene" uid="uid://dq1j5j850qe53" path="res://Inventory/weapon_inventory.tscn" id="8_k1ekw"]
[ext_resource type="Resource" uid="uid://bdo3eob8ewy58" path="res://Inventory/level_inventory.tres" id="8_mllkq"]
[ext_resource type="PackedScene" uid="uid://bbk3cyoh0j0k8" path="res://Inventory/weapon_slot.tscn" id="9_ckxtt"]
[ext_resource type="Script" uid="uid://dyfj0im1ibsaq" path="res://Scripts/levels/BottomUI/weapon_panel.gd" id="9_nqbl8"]
[ext_resource type="PackedScene" uid="uid://g3mls7ib10qq" path="res://Scenes/gear_description_popup.tscn" id="10_k1ekw"]
[ext_resource type="Script" uid="uid://cbwiylfhgtb4m" path="res://Scripts/levels/BottomUI/ranged_panel.gd" id="11_ckxtt"]
[ext_resource type="Script" uid="uid://dhwe01qohhwmq" path="res://Scripts/levels/BottomUI/armour_panel.gd" id="12_fu5kl"]
[ext_resource type="Script" uid="uid://boiwilwpvg2gd" path="res://Scripts/levels/BottomUI/stats_panel.gd" id="13_r8faa"]
[ext_resource type="Script" uid="uid://fdx6g5upl4fc" path="res://Scripts/level_3D/tiles.gd" id="15_hrrnm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oaity"]

[sub_resource type="Animation" id="Animation_3a44l"]
resource_name = "Panel_slide_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 400)]
}

[sub_resource type="Animation" id="Animation_vofx3"]
resource_name = "Panel_slide_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 400), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_00k4y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3a44l"]
_data = {
&"Panel_slide_down": SubResource("Animation_3a44l"),
&"Panel_slide_up": SubResource("Animation_vofx3"),
&"RESET": SubResource("Animation_00k4y")
}

[node name="Level3D" type="Node3D"]
script = ExtResource("1_b8p5r")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.60107, -0.5, 0)
visible = false
size = Vector3(25.2021, 1, 5)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.42505, 1, -3)
visible = false
size = Vector3(25.8501, 3, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.64886, 2.93352, 0)
visible = false
size = Vector3(25.2977, 1, 5)

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.33859, 0.0155088, 0)
collision_layer = 3
safe_margin = 0.01
script = ExtResource("1_iyh7l")

[node name="Sprite3D" type="Sprite3D" parent="Player"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.490908, 0)
double_sided = false
alpha_cut = 2
texture_filter = 0
texture = ExtResource("1_0phcd")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.490908, 2.75921)
h_offset = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.925, 0, 0, 0, 0.925, 0, 0, 0, 0.925, 0.194457, 0.5, 0)
shape = SubResource("SphereShape3D_oaity")

[node name="OmniLight3D" type="OmniLight3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.793654, 0.505, 0.489221)
light_color = Color(0.964054, 0.954214, 7.70092e-07, 1)
light_energy = 0.22
shadow_enabled = true
omni_range = 2.22

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopPanelContainer" type="PanelContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(800, 50)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 52.0
grow_horizontal = 2
size_flags_horizontal = 4
script = ExtResource("3_nmwpf")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TopPanelContainer"]
layout_mode = 2

[node name="LevelProgressBar" type="ProgressBar" parent="CanvasLayer/TopPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 4
show_percentage = false

[node name="TimeProgressionLabel" type="Label" parent="CanvasLayer/TopPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Hours passed: 0"
horizontal_alignment = 1

[node name="VictoryPanel" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(300, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -201.0
offset_right = 150.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ae7wr")
script = ExtResource("6_nqbl8")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VictoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VictoryPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Quest Conquered"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Money Looted:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Spoils Looted:"
horizontal_alignment = 1

[node name="LootInventory" parent="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer" instance=ExtResource("7_b8p5r")]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Victory Reward:"
horizontal_alignment = 1

[node name="WeaponInventory" parent="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer" instance=ExtResource("8_k1ekw")]
layout_mode = 2
size_flags_vertical = 3
slot_scene = ExtResource("9_ckxtt")

[node name="ExitButton" type="Button" parent="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="BottomUIPanel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(100, 125)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("3_ae7wr")
script = ExtResource("4_nmwpf")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BottomUIPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="OpenButton" type="Button" parent="CanvasLayer/BottomUIPanel/VBoxContainer"]
layout_mode = 2
text = "Open"

[node name="TopContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerPortrait" type="TextureRect" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_hrrnm")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="HealthContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer/HealthContainer"]
layout_mode = 2
text = "Health:"

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 20.0
value = 20.0

[node name="NerveContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer/NerveContainer"]
layout_mode = 2
text = "Nerve:"

[node name="NerveBar" type="ProgressBar" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer/NerveContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 20.0
value = 20.0

[node name="EmotionContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer/EmotionContainer"]
layout_mode = 2
text = "Emotion:"

[node name="EmotionLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer/VBoxContainer/EmotionContainer"]
layout_mode = 2
text = "Focused"

[node name="CardButton" type="Button" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "View Cards"
script = ExtResource("6_oaity")

[node name="InventoryLevel" parent="CanvasLayer/BottomUIPanel/VBoxContainer/TopContainer" instance=ExtResource("7_b8p5r")]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
inventoryData = ExtResource("8_mllkq")
is_player_inventory = true

[node name="BottomContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="ProgressionStatPanel" type="Panel" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
offset_left = 15.0
offset_right = 135.0
offset_bottom = 391.0
alignment = 1

[node name="BodyContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/BodyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BOD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BodyLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/BodyContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstinctContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/InstinctContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "INS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstinctLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/InstinctContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MindContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/MindContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "MIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MindLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/MindContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WillContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/WillContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "WILL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WillContainer" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/WillContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GnosisContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/GnosisContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GNO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GnosisLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/ProgressionStatPanel/StatsContainer/GnosisContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GearPanel" type="Panel" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GearContainer" type="VBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25
alignment = 1

[node name="MeleeContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer"]
layout_mode = 2
text = "MELEE"

[node name="MeleePanel" type="Panel" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
script = ExtResource("9_nqbl8")

[node name="MeleeTexture" type="TextureRect" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer/MeleePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GearDescriptionPopup" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer/MeleePanel" instance=ExtResource("10_k1ekw")]
visible = false
layout_mode = 0

[node name="RangedContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer"]
layout_mode = 2
text = "RANGED"

[node name="RangedPanel" type="Panel" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
script = ExtResource("11_ckxtt")

[node name="RangedTexture" type="TextureRect" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer/RangedPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GearDescriptionPopup" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer/RangedPanel" instance=ExtResource("10_k1ekw")]
visible = false
layout_mode = 0

[node name="ArmourContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer"]
layout_mode = 2
text = "ARMOUR"

[node name="ArmourPanel" type="Panel" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
script = ExtResource("12_fu5kl")

[node name="ArmourTexture" type="TextureRect" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer/ArmourPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GearDescriptionPopup" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer/ArmourPanel" instance=ExtResource("10_k1ekw")]
visible = false
layout_mode = 0

[node name="StatsPanel" type="Panel" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("13_r8faa")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel"]
layout_mode = 1
offset_right = 102.0
offset_bottom = 87.0

[node name="Label" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "STATS"

[node name="LevelContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/LevelContainer"]
layout_mode = 2
text = "LEVEL"

[node name="LevelLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/LevelContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="AccuracyContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/AccuracyContainer"]
layout_mode = 2
text = "ACCURACY"

[node name="AccuracyLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/AccuracyContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="DodgeContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/DodgeContainer"]
layout_mode = 2
text = "DODGE CHANCE"

[node name="DodgeLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/DodgeContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="CritContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/CritContainer"]
layout_mode = 2
text = "CRIT CHANCE"

[node name="CritLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/CritContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="MoneyContainer" type="HBoxContainer" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/MoneyContainer"]
layout_mode = 2
text = "MONEY LOOTED"

[node name="MoneyLabel" type="Label" parent="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/StatsPanel/VBoxContainer/MoneyContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BottomUIPanel"]
libraries = {
&"": SubResource("AnimationLibrary_3a44l")
}

[node name="Tiles" type="Node3D" parent="."]
script = ExtResource("15_hrrnm")

[connection signal="pressed" from="CanvasLayer/VictoryPanel/ScrollContainer/VBoxContainer/ExitButton" to="CanvasLayer/VictoryPanel" method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BottomUIPanel/VBoxContainer/OpenButton" to="CanvasLayer/BottomUIPanel" method="_on_open_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer/MeleePanel" to="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer/MeleePanel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer/MeleePanel" to="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/MeleeContainer/MeleePanel" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer/RangedPanel" to="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer/RangedPanel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer/RangedPanel" to="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/RangedContainer/RangedPanel" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer/ArmourPanel" to="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer/ArmourPanel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer/ArmourPanel" to="CanvasLayer/BottomUIPanel/VBoxContainer/BottomContainer/GearPanel/GearContainer/ArmourContainer/ArmourPanel" method="_on_mouse_exited"]
[connection signal="level_bounds_found" from="Tiles" to="Player" method="set_camera_bounds"]
[connection signal="level_won" from="Tiles" to="." method="_on_level_won"]
[connection signal="new_tile_cleared" from="Tiles" to="CanvasLayer/TopPanelContainer" method="set_progress"]
[connection signal="player_position_updated" from="Tiles" to="." method="_on_tiles_player_position_updated"]
